syntax = "proto3";

package grpc;
option go_package="ports/grpc";

service petCadaster{
    rpc ListPets (Empty) returns (stream PetInfo);
    rpc GetPet (ID) returns (PetInfo);
    rpc CreatePetCadaster (PetInfo) returns (ID);
    rpc UpdatePetCadaster (PetInfo) returns (Status);
    rpc RenamePet (RenameInfo) returns (Status);
    rpc DeletePetCadaster (ID) returns (Status);
    rpc CountPets (Empty) returns (stream CountInfo);
}

message Empty{}

message PetInfo {
    ID id = 1;
    string species = 2;
    string breed = 3;
    string sex = 4;
    int32 age = 5;
    float weight = 6;
    string size = 7;
    string color = 8;
    string neutered = 9;
    string origin = 10;
    string situation = 11;
    string registeredat = 12;
}

message RenameInfo {
    ID id = 1;
    string name = 2;
}

message CountInfo {
    int64 value = 1;
}

message ID {
    UUID value = 1;
}

message UUID {
    string value = 1;
}


message Status {
    bool value = 1;
}